PSARC 2005/374 Share management improvements 6281048 NFS needs simplified administration

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -361,6 +361,7 @@ COMMON_SUBDIRS = \
 	lib/libsecdb \
 	lib/libsendfile \
 	lib/libsip \
+	lib/libshare \
 	lib/libsldap \
 	lib/libslp \
 	lib/libsmbios \
