--- a/usr/src/psm/stand/bootblks/ufs/sparc/sun4u/Makefile
+++ b/usr/src/psm/stand/bootblks/ufs/sparc/sun4u/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,7 +21,7 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 1994,2000-2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # psm/stand/bootblks/ufs/sparc/sun4u/Makefile
@@ -61,6 +60,7 @@ PLATLINKS	+= SUNW,Sun-Fire-V490
 PLATLINKS	+= SUNW,Serverblade1
 PLATLINKS	+= SUNW,Netra-T12
 PLATLINKS	+= SUNW,Netra-T4
+PLATLINKS	+= SUNW,SPARC-Enterprise
 
 LINKED_DIRS             = $(PLATLINKS:%=$(USR_PLAT_DIR)/%)
 LINKED_LIB_DIRS         = $(PLATLINKS:%=$(USR_PLAT_DIR)/%/lib)
