6312914 routeadm needs to support smf-based routing services (add shell include Makefile)

--- a/usr/src/cmd/svc/shell/Makefile
+++ b/usr/src/cmd/svc/shell/Makefile
@@ -33,6 +33,7 @@ SRCS = \
 	fs_include.sh \
 	krb_include.sh \
 	net_include.sh \
+	routing_include.sh \
 	smf_include.sh
 
 SCRIPTS = $(SRCS:%=$(ROOT)/lib/svc/share/%)
