6486288 x64: create pcie(7d) module for PCIe error handling 6486415 time for pci.h and pcie.h to catch up with PCI SIG ID changes ..

--- a/usr/src/uts/i86pc/Makefile.i86pc.shared
+++ b/usr/src/uts/i86pc/Makefile.i86pc.shared
@@ -322,7 +322,7 @@ SYS_KMODS	+=
 #
 #	'Misc' Modules (/kernel/misc):
 #
-MISC_KMODS	+= pci_autoconfig bootdev acpica pciehpc gfx_private \
+MISC_KMODS	+= pci_autoconfig bootdev acpica pcie pciehpc gfx_private \
 		agpmaster drm
 
 #
