--- a/usr/src/uts/i86pc/Makefile.files
+++ b/usr/src/uts/i86pc/Makefile.files
@@ -149,10 +149,11 @@ MCAMD_OBJS	+= \
 #
 #	PCI-Express driver modules
 #
+PCI_E_MISC_OBJS += pcie_error.o
 PCI_E_NEXUS_OBJS += npe.o npe_misc.o 
-PCI_E_NEXUS_OBJS += pci_common.o pci_kstats.o pci_tools.o pcie_error.o
-PCI_E_PCINEXUS_OBJS += pcie_pci.o pcie_error.o
-PCIEHPCNEXUS_OBJS += pciehpc_x86.o pciehpc_acpi.o pciehpc_nvidia.o pcie_error.o
+PCI_E_NEXUS_OBJS += pci_common.o pci_kstats.o pci_tools.o
+PCI_E_PCINEXUS_OBJS += pcie_pci.o
+PCIEHPCNEXUS_OBJS += pciehpc_x86.o pciehpc_acpi.o pciehpc_nvidia.o
 
 #
 #	platform specific modules
