6477808 /usr/lib/nfs has spurious "32" symlink

--- a/usr/src/lib/libmapid/i386/Makefile
+++ b/usr/src/lib/libmapid/i386/Makefile
@@ -28,4 +28,4 @@ include ../Makefile.com
 
 all: $(LIBS)
 
-install: all $(ROOTLIBS) $(ROOTLINKS) $(ROOTLINT) $(ROOTSLINK32)
+install: all $(ROOTLIBS) $(ROOTLINKS) $(ROOTLINT)
