--- a/usr/src/lib/libmapid/sparc/Makefile
+++ b/usr/src/lib/libmapid/sparc/Makefile
@@ -28,4 +28,4 @@ include ../Makefile.com
 
 all: $(LIBS)
 
-install: all $(ROOTLIBS) $(ROOTLINKS) $(ROOTLINT) $(ROOTSLINK32)
+install: all $(ROOTLIBS) $(ROOTLINKS) $(ROOTLINT)
