6224192 Solaris needs unified key management interfaces (Fix _msg build target) 6224192 Solaris needs unified key management interfaces (suppress NSS lint error)

--- a/usr/src/cmd/cmd-crypto/kmfcfg/Makefile
+++ b/usr/src/cmd/cmd-crypto/kmfcfg/Makefile
@@ -73,7 +73,7 @@ $(PROG): $(OBJS)
 	$(POST_PROCESS)
 
 $(POFILE):	$(POFILES)
-	$(BUILDPO.pofiles)
+	$(RM) $@; $(CAT) $(POFILES) > $@
 
 install:	all $(ROOTDTDS) $(ROOTXML) $(ROOTPROG)
 
