--- a/usr/src/cmd/cmd-crypto/pktool/Makefile
+++ b/usr/src/cmd/cmd-crypto/pktool/Makefile
@@ -63,7 +63,7 @@ $(PROG) : $(OBJS)
 	$(POST_PROCESS)
 
 $(POFILE) : $(POFILES)
-	$(BUILDPO.pofiles)
+	$(RM) $@; $(CAT) $(POFILES) > $@
 
 install : all $(ROOTPROG)
 
