6489651 need a SUNWroutr package for the associated SMF manifests/methods (SUNWroute is "usr" SUNW_PKGTYPE) 6490110 src/cmd/ypcmd/Makefile doesn't clobber yp method script 6490558 in.ndpd doesn't start at boot when IPv6 interfaces are plumbed 6491410 routeadm in network/routing-setup can run before SMF routing manifests are imported and fails

--- a/usr/src/cmd/cmd-inet/usr.sbin/routeadm/Makefile
+++ b/usr/src/cmd/cmd-inet/usr.sbin/routeadm/Makefile
@@ -44,16 +44,18 @@ ROOTSVCMANIFESTDIR=	$(ROOTSVCNETWORK) $(ROOTSVCNETWORKROUTING)
 ROOTSVCMANIFEST=	$(ROOTSVCNETWORKROUTING)/legacy-routing.xml \
 			$(ROOTSVCNETWORK)/forwarding.xml
 
+include ../../Makefile.cmd-inet
+
 $(ROOTSVCMANIFEST)	:=	OWNER= root
 $(ROOTSVCMANIFEST)	:=	GROUP= sys
 $(ROOTSVCMANIFEST)	:=	FILEMODE= 444
 
 ROOTUSRSBINLINKS=	$(PROG:%=$(ROOTUSRSBIN)/%)
 
-CPPFLAGS +=	-I../../../../common/svc
+CPPFLAGS +=	-I../../../../common/svc -I$(CMDINETCOMMONDIR)
 $(NOT_RELEASE_BUILD)CPPFLAGS +=	-DDEBUG
 
-LDLIBS +=		-lscf -luutil
+LDLIBS +=		-lscf -luutil -lsocket
 
 ROOTSBINPROG=		$(ROOTFS_PROG:%=$(ROOTSBIN)/%)
 
