6489516 fix up some Makefile issues for dtrace/test

--- a/usr/src/cmd/dtrace/test/cmd/badioctl/Makefile
+++ b/usr/src/cmd/dtrace/test/cmd/badioctl/Makefile
@@ -33,6 +33,7 @@ ROOTOPTPKG = $(ROOT)/opt/SUNWdtrt
 ROOTBIN = $(ROOTOPTPKG)/bin
 
 LDFLAGS += -znodefs -ztextoff
+LDLIBS = $(LDLIBS.cmd)
 LDLIBS += -ldtrace
 
 SRCS = badioctl
