4634017 Lpadmin's new printer limit needs to be increased. 4941143 lpsched leaks memory in freeprinter() 6480891 lpsched fixes unused files 6486772 in.lpd should use libpapi 6486967 print-svc refers to /usr/sbin/cut 6487898 lpadmin doesn't add remote access 6488443 printmr/lpadmin should prefer IPP support when it's available 6490445 psm-lpd has incorrect mime type in it's translation table 6490453 lpr uses the wrong default mime type 6491971 in.lpd and the ipp listener should detect cycles 6491978 libhttp-core should build when -DDEBUG is specified 6492414 lpstat -o -l should report on requested form when available

--- a/usr/src/cmd/lp/cmd/Makefile
+++ b/usr/src/cmd/lp/cmd/Makefile
@@ -20,20 +20,19 @@
 
 
 #
-#
-# ident	"%Z%%M%	%I%	%E% SMI"
-#
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# cmd/lp/cmd/Makefile
+
+#
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 include 	../Makefile.lp
 
 OWNER = root
 
-SUBDIRS =	lptest lpadmin lpsched adaptor scripts
+SUBDIRS =	lptest lpadmin lpsched scripts
 
 LOCALPROG =	lpshut
 
