PSARC 2006/622 iSCSI/ZFS Integration 6484731 zfs import only mounts and shares the first layer of hierarchy 6493750 zfs and iSCSI do not work togetherly correctly 6494075 destroying a pool shouldn't touch the DSL

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -332,6 +332,7 @@ COMMON_SUBDIRS = \
 	lib/libipmp \
 	lib/libipp \
 	lib/libipsecutil \
+	lib/libiscsitgt \
 	lib/libkmf \
 	lib/libkstat \
 	lib/liblaadm \
