--- a/usr/src/cmd/bsmrecord/Makefile
+++ b/usr/src/cmd/bsmrecord/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -29,11 +28,10 @@
 include ../Makefile.cmd
 
 ATTR =			audit_record_attr
-ROOTETCSECURITY =	$(ROOT)/etc/security
+ROOTAUDITDIR =		$(ROOT)/usr/lib/audit
 
-ETCSECURITYFILES = 	$(ATTR:%=$(ROOTETCSECURITY)/%)
-$(ETCSECURITYFILES) :=	FILEMODE = 0644
-$(ETCSECURITYFILES) :=	GROUP = sys
+SECURITYFILES = 	$(ATTR:%=$(ROOTAUDITDIR)/%)
+$(SECURITYFILES) :=	FILEMODE = $(LIBFILEMODE)
 
 PROG		= bsmrecord
 
@@ -46,10 +44,13 @@ all: $(PROG) $(ATTR)
 
 install: all $(ROOTUSRSBINPROG) install_data
 
-install_data: $(ETCSECURITYFILES) $(ATTR)
+install_data: $(SECURITYFILES) $(ATTR)
 
-$(ETCSECURITYFILES): $(ETCSECURITY) $(ROOTETCSECURITY)
+$(SECURITYFILES): $(ROOTAUDITDIR)
 	$(INS.file) $(ATTR)
+
+$(ROOTAUDITDIR):
+	$(INS.dir)
 
 _msg: $(PROG).po
 
