PSARC/2006/617 strnlen() 6478299 Add strnlen Contributed by Richard L. Hamilton

--- a/usr/src/lib/libc/amd64/Makefile
+++ b/usr/src/lib/libc/amd64/Makefile
@@ -125,6 +125,7 @@ GENOBJS=			\
 	strlen.o		\
 	strncmp.o		\
 	strncpy.o		\
+	strnlen.o		\
 	sync_instruction_memory.o
 
 # Preserved solely to ease maintenance of 32-bit and 64-bit library builds
