6474853 Solaris should be cognizant of the platform while attempting to turn off smi mc polling 6489753 mc_amd.h not quite ready for revision G 6491720 DC/IC/BU system infill only capture physical <39:6> 6495485 i86pc/cpu/scripts do not get clobbered

--- a/usr/src/uts/i86pc/Makefile
+++ b/usr/src/uts/i86pc/Makefile
@@ -96,7 +96,7 @@ genassym unix $(KMODS):	FRC
 	@cd $@; pwd; $(MAKE) $(NO_STATE) $(TARGET)
 
 setup: FRC
-	@cd cpu/scripts; pwd; $(MAKE) setup
+	@cd cpu/scripts; pwd; $(MAKE) $(TARGET)
 
 $(XMODS):	FRC
 	@if [ -f $@/Makefile  ]; then \
