6480791 NULL pointer dereference panic on guest domains. 6494132 ldoms ds module could use lint cleanup

--- a/usr/src/uts/sun4v/ds/Makefile
+++ b/usr/src/uts/sun4v/ds/Makefile
@@ -25,7 +25,7 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
-# This makefile drives the production of the zp kernel module.
+# This makefile drives the production of the ds kernel module.
 #
 # sun4v implementation architecture dependent
 #
@@ -76,7 +76,6 @@ LDFLAGS		+= -dy -Nmisc/ldc
 # Please do not carry these forward to new Makefiles.
 #
 LINTTAGS	+= -erroff=E_BAD_PTR_CAST_ALIGN
-LINTTAGS	+= -erroff=E_SUSPICIOUS_COMPARISON
 
 #
 # Default build targets.
