6496846 dladm error message handling is a mess 6496888 dladm string-to-number conversion is tedious 6496893 dladm string-handling nits 6497292 libwladm and libdladm error strings not internationalized 6497294 NET80211_OBJS in Makefile.files has lines longer than 80 characters 6497389 dladm's do_connect_wifi() could be simpler

--- a/usr/src/lib/Makefile
+++ b/usr/src/lib/Makefile
@@ -269,6 +269,7 @@ MSGSUBDIRS=		\
 	libcurses	\
 	libdhcpsvc 	\
 	libdhcputil	\
+	libdladm	\
 	libgss		\
 	libinetcfg	\
 	libipmp		\
@@ -288,6 +289,7 @@ MSGSUBDIRS=		\
 	libuutil	\
 	libwanboot	\
 	libwanbootutil	\
+	libwladm	\
 	libzonecfg	\
 	lvm		\
 	madv		\
