--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -535,9 +535,9 @@ MAC_WIFI_OBJS +=	mac_wifi.o
 AGGR_OBJS +=	aggr_dev.o aggr_ctl.o aggr_grp.o aggr_port.o \
 		aggr_send.o aggr_recv.o aggr_lacp.o
 
-NET80211_OBJS +=	net80211.o net80211_proto.o net80211_input.o net80211_output.o \
-			net80211_node.o net80211_crypto.o net80211_crypto_none.o \
-			net80211_crypto_wep.o net80211_ioctl.o
+NET80211_OBJS += net80211.o net80211_proto.o net80211_input.o \
+		 net80211_output.o net80211_node.o net80211_crypto.o \
+		 net80211_crypto_none.o net80211_crypto_wep.o net80211_ioctl.o
 
 IB_OBJS +=	ibnex.o ibnex_ioctl.o
 
