6494262 application using audit interface require file_dac_read or uid 0

--- a/usr/src/lib/libbsm/Makefile
+++ b/usr/src/lib/libbsm/Makefile
@@ -73,7 +73,7 @@ $(ROOTETCSECURITY) := 	DIRMODE = 0755
 $(ROOTETCSECURITY) := 	OWNER = root
 $(ROOTETCSECURITY) := 	GROUP = sys
 
-ESFILES =		audit_class audit_event
+ESFILES =		audit_class audit_control audit_event audit_user
 ESSRC =			$(ESFILES:%=%.txt)
 ETCSECURITYFILES =	$(ESFILES:%=$(ROOTETCSECURITY)/%)
 $(ETCSECURITYFILES) :=	FILEMODE = 0644
@@ -86,13 +86,6 @@ EETCSECURITYFILES =	$(EESFILES:%=$(ROOTETCSECURITY)/%)
 $(EETCSECURITYFILES) :=	FILEMODE = 0744
 $(EETCSECURITYFILES) :=	OWNER = root
 $(EETCSECURITYFILES) :=	GROUP = sys
-
-RESFILES = 		audit_control audit_user
-RESSRC =		$(RESFILES:%=%.txt)
-ROOTETCSECURITYFILES =	$(RESFILES:%=$(ROOTETCSECURITY)/%)
-$(ROOTETCSECURITYFILES) := FILEMODE = 0640
-$(ROOTETCSECURITYFILES) := OWNER = root
-$(ROOTETCSECURITYFILES) := GROUP = sys
 
 #
 # /etc/security/audit/localhost/files is a symbolic link to /var/audit.
@@ -150,14 +143,14 @@ install_h: $(ROOTHDRDIR) $(ROOTHDRS) $(ROOTCHDRS)
 check:	$(CHECKHDRS) $(CHECKCHDRS)
 
 install_data: $(ESSRC) $(RESSRC) $(ROOTETCSECURITY) $(ETCSECURITYFILES) \
-	$(EETCSECURITYFILES) $(ROOTETCSECURITYFILES) $(ROOTXMLFILES)
+	$(EETCSECURITYFILES) $(ROOTXMLFILES)
 
 install_dirs: $(AUDITDIRS) $(ARSYMLNK) $(ROOTXMLDIRS)
 
 audit_uevents.h: mkhdr.sh audit_event.txt
 	sh mkhdr.sh
 
-$(ETCSECURITYFILES) $(EETCSECURITYFILES) $(ROOTETCSECURITYFILES) $(RESA): \
+$(ETCSECURITYFILES) $(EETCSECURITYFILES) $(RESA): \
 	$(ETCSECURITY) \
 	$(ROOTETCSECURITY)
 
