--- a/usr/src/cmd/xargs/Makefile
+++ b/usr/src/cmd/xargs/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -22,47 +21,28 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 
 PROG= xargs
-XPG6PROG= xargs
-XD= exobjs.xpg6
-EXOBJS= xargs.o
-XPG6EXOBJS= exobjs.xpg6/xargs.o 
+# /usr/xpg6/bin/xargs is a symlink to /usr/bin/xargs
+ROOTXPG6SYMLINK= $(ROOTXPG6BIN)/xargs
 
 include ../Makefile.cmd
 
 .KEEP_STATE:
 
-all: $(PROG) $(XPG6)
+all: $(PROG)
 
-$(PROG): $(EXOBJS)
-	$(LINK.c) -o $@ $(EXOBJS) $(LDLIBS)
-	$(POST_PROCESS)
+install: all $(ROOTPROG) $(ROOTXPG6SYMLINK)
 
-
-$(XPG6): $(XD) $(XPG6EXOBJS)
-	$(LINK.c) -o $@ $(XPG6EXOBJS) $(LDLIBS)
-	$(POST_PROCESS)
-
-install: all $(ROOTPROG) $(ROOTXPG6PROG)
+$(ROOTXPG6SYMLINK):	$(ROOTPROG)
+	-$(RM)	$@
+	-$(SYMLINK)	../../bin/$(PROG) $@
 
 clean:
-	-@rm -rf $(EXOBJS) $(XD)
 
 lint:	lint_PROG
 
-$(XPG6EXOBJS): $(XD)
-
-$(XD)/%.o:	%.c
-	$(COMPILE.c) -o $@ $<
-
-$(XD):
-	-@mkdir -p $@
-
-
 include ../Makefile.targ
-
-$(XPG6) := CFLAGS += -DXPG6
