--- a/usr/src/lib/libdtrace/common/procfs.sed.in
+++ b/usr/src/lib/libdtrace/common/procfs.sed.in
@@ -2,9 +2,8 @@
  * CDDL HEADER START
  *
  * The contents of this file are subject to the terms of the
- * Common Development and Distribution License, Version 1.0 only
- * (the "License").  You may not use this file except in compliance
- * with the License.
+ * Common Development and Distribution License (the "License").
+ * You may not use this file except in compliance with the License.
  *
  * You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
  * or http://www.opensolaris.org/os/licensing.
@@ -19,8 +18,9 @@
  *
  * CDDL HEADER END
  */
+
 /*
- * Copyright 2003 Sun Microsystems, Inc.  All rights reserved.
+ * Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
  * Use is subject to license terms.
  */
 
@@ -76,6 +76,9 @@ SED_REPLACE(SSTOP)
 SED_REPLACE(SIDL)
 SED_REPLACE(SONPROC)
 
+SED_REPLACE(CLDNOSIGCHLD)
+SED_REPLACE(CLDWAITPID)
+
 SED_REPLACE(PR_STOPPED)
 SED_REPLACE(PR_ISTOP)
 SED_REPLACE(PR_DSTOP)
@@ -86,9 +89,12 @@ SED_REPLACE(PR_ASLWP)
 SED_REPLACE(PR_AGENT)
 SED_REPLACE(PR_DETACH)
 SED_REPLACE(PR_DAEMON)
+SED_REPLACE(PR_IDLE)
 SED_REPLACE(PR_ISSYS)
 SED_REPLACE(PR_VFORKP)
 SED_REPLACE(PR_ORPHAN)
+SED_REPLACE(PR_NOSIGCHLD)
+SED_REPLACE(PR_WAITPID)
 SED_REPLACE(PR_FORK)
 SED_REPLACE(PR_RLC)
 SED_REPLACE(PR_KLC)
@@ -97,7 +103,6 @@ SED_REPLACE(PR_MSACCT)
 SED_REPLACE(PR_BPTADJ)
 SED_REPLACE(PR_PTRACE)
 SED_REPLACE(PR_MSFORK)
-SED_REPLACE(PR_IDLE)
 
 SED_REPLACE(PR_MODEL_ILP32)
 SED_REPLACE(PR_MODEL_LP64)
