PSARC 2006/496 Improved Zones/RM Integration PSARC 2006/598 Swap resource control; locked memory RM improvements PSARC 2006/660 rcapadm zone option 4754856 *prstat* prstat -atJTZ should count shared segments only once 4970603 RFE: should be able to persistently specify global zone's cpu shares 5026227 RFE: ability to rcap zones from global zone 5103071 RFE: local zones can run the global zone out of swap 6222025 RFE: simplify rctl syntax and improve cpu-shares/FSS interaction 6420985 rcapstat is broken on amd64 6421202 RFE: simplify and improve zones/pool integration 6442252 zonecfg's "unset" syntax is not documented and confusing 6490516 schedctl pages should not reserve swap 6490938 setproject can bind to the wrong pool 6498635 zone attach failure leaves zone in installed state 6500877 tmpfs syslogs incorrect path when non-global zone tmpfs mounts become full

--- a/usr/src/cmd/rcap/rcapd/Makefile.rcapd
+++ b/usr/src/cmd/rcap/rcapd/Makefile.rcapd
@@ -35,6 +35,7 @@
 SRCS =	rcapd_main.c \
 	rcapd_collection.c \
 	rcapd_collection_project.c \
+	rcapd_collection_zone.c \
 	rcapd_mapping.c \
 	rcapd_rfd.c \
 	rcapd_scanner.c \
@@ -44,6 +45,7 @@ SRCS =	rcapd_main.c \
 LINTSRCS = ../rcapd_main.c \
 	../rcapd_collection.c \
 	../rcapd_collection_project.c \
+	../rcapd_collection_zone.c \
 	../rcapd_mapping.c \
 	../rcapd_rfd.c \
 	../rcapd_scanner.c \
@@ -53,7 +55,7 @@ LINTSRCS = ../rcapd_main.c \
 $(NOT_RELEASE_BUILD)CPPFLAGS 	+= -DDEBUG
 CPPFLAGS			+= -DDEBUG_MSG
 CPPFLAGS 			+= -I$(COMMON_DIR)
-LDLIBS 				+= -lkstat -ll -lproc -lproject -lumem
+LDLIBS 				+= -lkstat -ll -lproc -lproject -lzonecfg -lumem
 LDLIBS				+= $(EXTRA_LDLIBS)
 
 LINTFLAGS			+= -u
