PSARC 2006/360 Page retire and caged memory kstats PSARC 2006/401 /dev/physmem 6385792 physical memory driver needed for memory testing

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -571,6 +571,8 @@ FSSNAPIF_OBJS += fssnap_if.o
 
 MM_OBJS +=	mem.o
 
+PHYSMEM_OBJS +=	physmem.o
+
 OPTIONS_OBJS += options.o
 
 WINLOCK_OBJS +=	winlockio.o
