--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -227,7 +227,7 @@ DRV_KMODS	+= dtrace fasttrap fbt lockstat profile sdt systrace
 DRV_KMODS	+= fssnap icmp icmp6 ip ip6 ipsecah
 DRV_KMODS	+= ipsecesp iwscn keysock kmdb kstat ksyms llc1
 DRV_KMODS	+= lofi
-DRV_KMODS	+= log logindmux kssl mm nca pm poll pool
+DRV_KMODS	+= log logindmux kssl mm nca physmem pm poll pool
 DRV_KMODS	+= pseudo ptc ptm pts ptsl ramdisk random rsm rts sad
 DRV_KMODS	+= sppp sppptun sy sysevent sysmsg 
 DRV_KMODS	+= spdsock
