--- a/usr/src/uts/intel/os/bootenv.rc
+++ b/usr/src/uts/intel/os/bootenv.rc
@@ -1,13 +1,12 @@
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -26,7 +25,7 @@
 #
 #	bootenv.rc -- boot "environment variables"
 #
-setprop kbd-type US-English
+setprop keyboard-layout Unknown
 setprop ata-dma-enabled 1
 setprop atapi-cd-dma-enabled 1
 setprop ttyb-rts-dtr-off false
